Call bmalloc scavenger first when handling a memory pressure event https://bugs.webkit.org/show_bug.cgi?id=171289

Reviewed by Geoffrey Garen.

Source/bmalloc:

Registered a critical memory pressure handler.  We add this handler in addition to the
call to release bmalloc memory in the WebCore releaseMemory handler for the case of
JSC API users that don't use WebCore.  When both handlers are in the process, it is
basically a race.  One will win, but the loser won't do any more work, so it is harmless.

* bmalloc/Heap.cpp:
(bmalloc::Heap::Heap):

Source/WebCore:

Let bmalloc free any pages to the OS that it can before doing anything else.

* page/MemoryRelease.cpp:
(WebCore::releaseMemory):


Canonical link: https://commits.webkit.org/188178@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215775 268f45cc-cd09-0410-ab3c-d52691b4dbfc