Source/bmalloc/bmalloc/Heap.cpp
@@ -30,6 +30,10 @@
 #include "PerProcess.h"
 #include "SmallLine.h"
 #include "SmallPage.h"
+#if BOS(DARWIN)
+#include "bmalloc.h"
+#include <dispatch/dispatch.h>
+#endif
 #include <thread>
 
 namespace bmalloc {
@@ -48,6 +52,15 @@ Heap::Heap(std::lock_guard<StaticMutex>&)
     
     if (m_environment.isDebugHeapEnabled())
         m_debugHeap = PerProcess<DebugHeap>::get();
+
+#if BOS(DARWIN)
+    auto queue = dispatch_queue_create("WebKit Malloc Memory Pressure Handler", DISPATCH_QUEUE_SERIAL);
+    auto source = dispatch_source_create(DISPATCH_SOURCE_TYPE_MEMORYPRESSURE, 0, DISPATCH_MEMORYPRESSURE_CRITICAL, queue);
+    dispatch_source_set_event_handler(source, ^{
+        api::scavenge();
+    });
+    dispatch_resume(source);
+#endif
 }
 
 void Heap::initializeLineMetadata()
